<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>go_get_it</name>
  <version>0.0.1</version>
  
  <description>Gentlebots solution for Robocup2021 'Go Get It' Challenge</description>

  <maintainer email="jonatan.gines@urjc.es">Jonatan Ginés Clavero</maintainer>
 
  <license>Apache License, Version 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>plansys2_executor</depend>
  <depend>ament_index_cpp</depend>
  <depend>ros2_knowledge_graph</depend>
  <depend>rclcpp_cascade_lifecycle</depend>
  <depend>ros2_knowledge_graph_plugins</depend>

  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
